Termo de compromisso, informações do seguro podem ser cadastradas, alteradas e visualizadas para turmas do tipo NPI.

--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/adicionar-turma.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/adicionar-turma.html
@@ -156,6 +156,14 @@
 						      </div>
 						    </div>
 
+						   <div class="form-group" th:classappend="${#fields.hasErrors('apolice')} ? has-error : ''">
+						      <label for="apolice" class="col-md-2 control-label">Apólice</label>
+						      <div class="col-md-10">
+						        <input type="text" th:field="*{apolice}" class="form-control" placeholder="Número da Apólice"/>
+						        <span id="nome-error" class="help-block" th:if="${#fields.hasErrors('apolice')}" th:errors="*{apolice}"></span>
+						      </div>
+						    </div>
+
 						   <div class="form-group" th:classappend="${#fields.hasErrors('cargaHorariaSemanal')} ? has-error : ''">
 						      <label for="cargaHorariaSemanal" class="col-md-2 control-label">Carga Horaria Semanal</label>
 						      <div class="col-md-10">
@@ -167,7 +175,7 @@
 						   <div class="form-group" th:classappend="${#fields.hasErrors('seguroMorteAcidental')} ? has-error : ''">
 						      <label for="seguroMorteAcidental" class="col-md-2 control-label">Seguro Morte Acidental</label>
 						      <div class="col-md-10">
-						        <input type="text" th:field="*{seguroMorteAcidental}" class="form-control" placeholder="Seguro Morte Acidental. Ex.: R$ 20.000,00"/>
+						        <input type="text" th:field="*{seguroMorteAcidental}" class="form-control" placeholder="0.000,00"/>
 						        <span id="nome-error" class="help-block" th:if="${#fields.hasErrors('seguroMorteAcidental')}" th:errors="*{seguroMorteAcidental}"></span>
 						      </div>
 						    </div>
@@ -175,7 +183,7 @@
 						   <div class="form-group" th:classappend="${#fields.hasErrors('seguroInvalidezPermanente')} ? has-error : ''">
 						      <label for="seguroInvalidezPermanente" class="col-md-2 control-label">Seguro Invalidez Permantente</label>
 						      <div class="col-md-10">
-						        <input type="text" th:field="*{seguroInvalidezPermanente}" class="form-control" placeholder="Seguro Invalidez Permantente. Ex.: R$ 20.000,00"/>
+						        <input type="text" th:field="*{seguroInvalidezPermanente}" class="form-control" placeholder="0.000,00"/>
 						        <span id="nome-error" class="help-block" th:if="${#fields.hasErrors('seguroInvalidezPermanente')}" th:errors="*{seguroInvalidezPermanente}"></span>
 						      </div>
 						    </div>
