--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/editar-turma.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/editar-turma.html
@@ -140,6 +140,62 @@
 						      </div>
 						    </div>
 
+						   <div id="termoCompromisso" th:if="${not #strings.equals(turma.tipoTurma,'EMPRESA')}">
+						   <fieldset><legend>Termo de Compromisso</legend></fieldset>
+
+						   <div class="form-group" th:classappend="${#fields.hasErrors('nomeSeguradora')} ? has-error : ''">
+						      <label for="nomeSeguradora" class="col-md-2 control-label">Seguradora</label>
+						      <div class="col-md-10">
+						        <input type="text" th:field="*{nomeSeguradora}" class="form-control" placeholder="Nome da Seguradora"/>
+						        <span id="nome-error" class="help-block" th:if="${#fields.hasErrors('nomeSeguradora')}" th:errors="*{nomeSeguradora}"></span>
+						      </div>
+						    </div>
+
+						   <div class="form-group" th:classappend="${#fields.hasErrors('apolice')} ? has-error : ''">
+						      <label for="apolice" class="col-md-2 control-label">Apólice</label>
+						      <div class="col-md-10">
+						        <input type="text" th:field="*{apolice}" class="form-control" placeholder="Número da Apólice"/>
+						        <span id="nome-error" class="help-block" th:if="${#fields.hasErrors('apolice')}" th:errors="*{apolice}"></span>
+						      </div>
+						    </div>
+
+						   <div class="form-group" th:classappend="${#fields.hasErrors('cargaHorariaSemanal')} ? has-error : ''">
+						      <label for="cargaHorariaSemanal" class="col-md-2 control-label">Carga Horaria Semanal</label>
+						      <div class="col-md-10">
+						        <input type="text" th:field="*{cargaHorariaSemanal}" class="form-control" placeholder="Carga Horaria Semanal. Ex.: 10 (Dez)"/>
+						        <span id="nome-error" class="help-block" th:if="${#fields.hasErrors('cargaHorariaSemanal')}" th:errors="*{cargaHorariaSemanal}"></span>
+						      </div>
+						    </div>
+
+						   <div class="form-group" th:classappend="${#fields.hasErrors('seguroMorteAcidental')} ? has-error : ''">
+						      <label for="seguroMorteAcidental" class="col-md-2 control-label">Seguro Morte Acidental</label>
+						      <div class="col-md-10">
+						        <input type="text" th:field="*{seguroMorteAcidental}" class="form-control" placeholder="Seguro Morte Acidental. Ex.: R$ 20.000,00"/>
+						        <span id="nome-error" class="help-block" th:if="${#fields.hasErrors('seguroMorteAcidental')}" th:errors="*{seguroMorteAcidental}"></span>
+						      </div>
+						    </div>
+
+						   <div class="form-group" th:classappend="${#fields.hasErrors('seguroInvalidezPermanente')} ? has-error : ''">
+						      <label for="seguroInvalidezPermanente" class="col-md-2 control-label">Seguro Invalidez Permantente</label>
+						      <div class="col-md-10">
+						        <input type="text" th:field="*{seguroInvalidezPermanente}" class="form-control" placeholder="Seguro Invalidez Permantente. Ex.: R$ 20.000,00"/>
+						        <span id="nome-error" class="help-block" th:if="${#fields.hasErrors('seguroInvalidezPermanente')}" th:errors="*{seguroInvalidezPermanente}"></span>
+						      </div>
+						    </div>
+
+						   <div id="form-data" class="form-group" th:classappend="${#fields.hasErrors('inicioVigencia') OR #fields.hasErrors('terminoVigencia')} ? has-error : ''">
+						      <label for="inicioVigencia" class="col-md-2 control-label">Vigência Contrato</label>
+						      <div class="col-md-5">
+						        <input type="text" class="form-control data" th:field="*{inicioVigencia}" placeholder="Início Vigência do Contrato"/>
+						        <span id="nome-error" class="help-block" th:if="${#fields.hasErrors('inicioVigencia')}" th:errors="*{inicioVigencia}"></span>
+						      </div>
+						      <div class="col-md-5">
+						        <input type="text" class="form-control data" th:field="*{terminoVigencia}" placeholder="Término Vigência do Contrato"/>
+						        <span id="nome-error" class="help-block" th:if="${#fields.hasErrors('terminoVigencia')}" th:errors="*{terminoVigencia}"></span>
+						      </div>
+						    </div>
+							</div>
+
 							<div class="form-group">
 						      <div class="col-lg-10 col-lg-offset-2">
 						        <a class="btn btn-default" th:href="@{/Supervisao/Turma/{idTurma}(idTurma=${turma.id})}">Cancelar</a>
