--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/detalhes-turma.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/detalhes-turma.html
@@ -114,6 +114,7 @@
 				        	<td th:text="${estagio.estagiario.nomeCompleto}"></td>
 				        	<td th:text="${estagio.estagiario.curso.descricao}"></td>
 				        	<td>
+				        		<a th:href="@{/Supervisao/Acompanhamento/{id}(id=${estagio.id})}" class="btn btn-success btn-sm pull-right gp-btn-acompanhamento">declaração</a>
 				        		<a th:href="@{/Supervisao/Acompanhamento/{id}(id=${estagio.id})}" class="btn btn-success btn-sm pull-right gp-btn-acompanhamento">acompanhamento</a>
 				        	</td>
 				      	</tr>
