--- a/aplicacoes/gestao-estagio/src/main/resources/DECLARACAO_ESTAGIO.jrxml
+++ b/aplicacoes/gestao-estagio/src/main/resources/DECLARACAO_ESTAGIO.jrxml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="DECLARACAO_ESTAGIO" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
+<!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
+<!-- 2017-03-16T09:02:28 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="DECLARACAO_ESTAGIO" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20"  >
 	<property name="ireport.zoom" value="1.1"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="140"/>
+	<parameter name="NOME_SUPERVISOR" class="java.lang.String"/>
+	<parameter name="CARGA_HORARIA_SEMANAL" class="java.lang.String"/>
 	<field name="estagiario.nomeCompleto" class="java.lang.String"/>
 	<field name="estagiario.pessoa.cpf" class="java.lang.String"/>
 	<field name="estagiario.curso.descricao" class="java.lang.String"/>
+	<field name="turma.inicio" class="java.util.Date"/>
+	<field name="turma.termino" class="java.util.Date"/>
 	<detail>
 		<band height="795" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="140" width="555" height="79"/>
+				<reportElement x="0" y="140" width="555" height="79"  />
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="14" isBold="true"/>
 				</textElement>
@@ -19,23 +25,14 @@
 NÚCLEO DE PRÁTICAS EM INFORMÁTICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="258" width="555" height="20"/>
+				<reportElement x="0" y="258" width="555" height="20"  />
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="14" isBold="true" isUnderline="true" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[DECLARAÇÃO DE ESTÁGIO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="103" y="536" width="375" height="47"/>
-				<textElement textAlignment="Center">
-					<font fontName="Arial" size="12"/>
-				</textElement>
-				<text><![CDATA[Prof. MSc. Camilo Camilo Almendra
-Supervisor Responsável
-UFC – Campus Quixadá]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="103" y="766" width="375" height="29"/>
+				<reportElement x="103" y="766" width="375" height="29"  />
 				<textElement textAlignment="Center">
 					<font fontName="Arial"/>
 				</textElement>
@@ -43,22 +40,32 @@ UFC – Campus Quixadá]]></text>
 Tel.: (88) 3412 0919	E-mail: secretaria@quixada.ufc.br]]></text>
 			</staticText>
 			<image>
-				<reportElement x="239" y="19" width="102" height="94"/>
+				<reportElement x="239" y="19" width="102" height="94"  />
 				<imageExpression><![CDATA["./ufc.jpg"]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="103" y="315" width="375" height="104"/>
+				<reportElement x="103" y="315" width="375" height="104"  />
 				<textElement textAlignment="Justified">
 					<font fontName="Arial" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Declaro, para os devidos fins, que " + $F{estagiario.nomeCompleto} + ", CPF " + $F{estagiario.pessoa.cpf} + ", estudante do curso de " + $F{estagiario.curso.descricao} + ", cumpriu estágio supervisionado não-remunerado no Núcleo de Práticas em Informática do Campus da UFC Quixadá, no período de 28 de Julho de 2014 a 28 de Novembro de 2014, cumprindo carga horária semanal de 12 (doze) horas."]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Declaro, para os devidos fins, que " + $F{estagiario.nomeCompleto} + ", CPF " + $F{estagiario.pessoa.cpf} + ", estudante do curso de " + $F{estagiario.curso.descricao} + ", cumpriu estágio supervisionado não-remunerado no Núcleo de Práticas em Informática do Campus da UFC Quixadá, no período de " + SimpleDateFormat.getDateInstance(java.text.DateFormat.LONG, new java.util.Locale("pt", "BR")).format($F{turma.inicio})+ " a " + SimpleDateFormat.getDateInstance(java.text.DateFormat.LONG, new java.util.Locale("pt", "BR")).format($F{turma.termino}) + ", cumprindo carga horária semanal de " + $P{CARGA_HORARIA_SEMANAL} + " horas."]]></textFieldExpression>
 			</textField>
 			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement x="103" y="420" width="375" height="32"/>
+				<reportElement x="103" y="420" width="375" height="32"  />
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Quixadá-CE, " + SimpleDateFormat.getDateInstance(java.text.DateFormat.FULL, new java.util.Locale("pt", "BR")).format(new Date())]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="103" y="540" width="375" height="47"  >
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+				</reportElement>
+				<textElement textAlignment="Center" markup="html">
+					<font fontName="Arial" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{NOME_SUPERVISOR} + "<br> Supervisor(a) Responsável <br> UFC – Campus Quixadá"]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
