Correção de Links e Atualização font Jasper

--- a/aplicacoes/gestao-estagio/src/main/resources/templates/login.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/login.html
@@ -70,8 +70,8 @@
 						<button type="submit" class="btn btn-primary col-sm-12">Entrar</button>
 				</div>
 				<div class="panel-footer">
-					<a href="http://cadastroaluno.intranet/" target="_blank" class="btn btn-link btn-xs">Cadastre-se</a>
-					<a href="http://identidadepessoa.intranet/" target="_blank" class="btn btn-link btn-xs pull-right">Recuperar senha</a>
+					<a href="https://cadastroaluno.quixada.ufc.br/" target="_blank" class="btn btn-link btn-xs">Cadastre-se</a>
+					<a href="https://identidadepessoa.quixada.ufc.br/_recuperarsenha_" target="_blank" class="btn btn-link btn-xs pull-right">Recuperar senha</a>
 				</div>
 			</div>
 
