--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/acompanhamento-estagiario.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/acompanhamento-estagiario.html
@@ -153,7 +153,7 @@
 			      <div class="col-sm-4">
 			          <ul class="list-group">
 			            <li class="list-group-item gp-list-group-item list-group-item-warning">
-			              <b>Atrasos</b> <span class="badge" th:inline="text">[[${estagio.atraso}]]</span>
+			              <b>Atrasos</b> <span class="badge" th:inline="text">[[${estagio.atraso}]] <b>min</b> </span>
 			            </li>
 			          </ul>
 			      </div>
