--- a/aplicacoes/gestao-estagio/src/main/resources/DECLARACAO_ESTAGIO.jrxml
+++ b/aplicacoes/gestao-estagio/src/main/resources/DECLARACAO_ESTAGIO.jrxml
@@ -17,7 +17,7 @@
 			<staticText>
 				<reportElement x="0" y="140" width="555" height="79"  />
 				<textElement textAlignment="Center">
-					<font fontName="Arial" size="14" isBold="true"/>
+					<font fontName="DejaVu Sans" size="13" isBold="true"/>
 				</textElement>
 				<text><![CDATA[UNIVERSIDADE FEDERAL DO CEARÁ
  CAMPUS DE QUIXADÁ
@@ -27,7 +27,7 @@ NÚCLEO DE PRÁTICAS EM INFORMÁTICA]]></text>
 			<staticText>
 				<reportElement x="0" y="258" width="555" height="20"  />
 				<textElement textAlignment="Center">
-					<font fontName="Arial" size="14" isBold="true" isUnderline="true" isStrikeThrough="false"/>
+					<font fontName="DejaVu Sans" size="13" isBold="true" isUnderline="true" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[DECLARAÇÃO DE ESTÁGIO]]></text>
 			</staticText>
@@ -46,14 +46,14 @@ Tel.: (88) 3412 0919	E-mail: secretaria@quixada.ufc.br]]></text>
 			<textField>
 				<reportElement x="103" y="315" width="375" height="104"  />
 				<textElement textAlignment="Justified">
-					<font fontName="Arial" size="12"/>
+					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Declaro, para os devidos fins, que " + $F{estagiario.nomeCompleto} + ", CPF " + $F{estagiario.pessoa.cpf} + ", estudante do curso de " + $F{estagiario.curso.descricao} + ", cumpriu estágio supervisionado não-remunerado no Núcleo de Práticas em Informática do Campus da UFC Quixadá, no período de " + SimpleDateFormat.getDateInstance(java.text.DateFormat.LONG, new java.util.Locale("pt", "BR")).format($F{turma.inicio})+ " a " + SimpleDateFormat.getDateInstance(java.text.DateFormat.LONG, new java.util.Locale("pt", "BR")).format($F{turma.termino}) + ", cumprindo carga horária semanal de " + $P{CARGA_HORARIA_SEMANAL} + " horas."]]></textFieldExpression>
 			</textField>
 			<textField pattern="EEEEE dd MMMMM yyyy">
 				<reportElement x="103" y="420" width="375" height="32"  />
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font size="12"/>
+					<font size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Quixadá-CE, " + SimpleDateFormat.getDateInstance(java.text.DateFormat.FULL, new java.util.Locale("pt", "BR")).format(new Date())]]></textFieldExpression>
 			</textField>
@@ -63,7 +63,7 @@ Tel.: (88) 3412 0919	E-mail: secretaria@quixada.ufc.br]]></text>
 					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 				</reportElement>
 				<textElement textAlignment="Center" markup="html">
-					<font fontName="Arial" size="12"/>
+					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{NOME_SUPERVISOR} + "<br> Supervisor(a) Responsável <br> UFC – Campus Quixadá"]]></textFieldExpression>
 			</textField>
